--- a/package.json
+++ b/package.json
@@ -1,20 +1,25 @@
 {
-  "homepage" : "https://gavinretrowind.github.io/my-app/",
+  "homepage": "https://gavinretrowind.github.io/my-app/",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.9.3",
+    "@material-ui/icons": "^3.0.2",
+    "fg-loadcss": "^2.1.0",
     "gh-pages": "^2.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.0"
+    "react-scripts": "3.0.0",
+    "stylus": "^0.54.5"
   },
   "scripts": {
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "css": "stylus -w src/stylus/index.styl -o src"
   },
   "eslintConfig": {
     "extends": "react-app"
