--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "gh-pages": "^2.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-markdown": "^4.0.8",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.0",
+    "react-syntax-highlighter": "^10.2.1",
+    "react-vis": "^1.11.7",
     "stylus": "^0.54.5"
   },
   "scripts": {
